// Defines the protobuf messsages and services used by the yt_box backend and
// clients to the backend.
//
// Usage:
// cd to project root
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative internal/proto/common/common.proto

syntax = "proto3";

package common_pb;
option go_package = "github.com/nguyenmq/ytbox-go/internal/proto/common";

// Empty message
message Empty {}

enum ServiceType {
    None    = 0;
    Youtube = 1;
    Spotify = 2;
    Local   = 3;
}

// A song in the queue
message Song {
    // title of the song
    string title = 1;

    // internal song id
    uint32 songId = 2;

    // name of user who submitted the song
    string username = 3;

    // id of user
    uint32 userId = 4;

    // id of service song belongs to
    ServiceType service = 5;

    // id specific to song's service
    string serviceId = 6;

    // id of the room where the song was submitted
    uint32 roomId = 7;

    // metadata about the song
    Metadata metadata = 8;
}

message Metadata {
    string thumbnail = 1;
    string duration = 2;
}
